--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -270,7 +270,7 @@ header .md-search__input::placeholder {
 }
 
 .header__links a {
-  color: #18253d !important;
+  color: #18253d;
 }
 
 .header__links a:hover {
@@ -509,7 +509,6 @@ header .md-search__input::placeholder {
   border-right: none !important;
   background-color: white !important;
   border-left: 3px solid #0fb2ef;
-  
 }
 
 .md-tabs__item {
@@ -522,6 +521,47 @@ header .md-search__input::placeholder {
   margin-bottom: 2rem;
 }
 
-
 /*scroll*/
 
+/*nav dropdown*/
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  padding: 10px 15px;
+  width: max-content;
+  background: #ffffff;
+  box-shadow: 0px -5px 20px rgba(210, 223, 249, 0.5);
+  border-radius: 4px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  display: block;
+  text-decoration: none !important;
+  margin: 0 0 5px 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.dropdown-content a:hover {
+  color: #0fb2ef;
+}
+
+.dropdown a {
+  text-decoration: none !important;
+}
+
+.dropdown a:hover {
+  color: #0fb2ef;
+}
