--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -74,16 +74,100 @@ set class = class ~ " md-header--shadow md-header--lifted" %} {% elif
     endif %}
 
     <div class="header__links">
-      <a href="https://wiremock.org/docs" class="header__link"> Docs </a>
-      <a href="https://wiremock.org/support" class="header__link">
-        Need Help?
-      </a>
-      <a href="https://wiremock.org/participate" class="header__link">
-        Participate
-      </a>
-      <a href="https://wiremock.org/external-resources/" class="header__link">
-        Resources
-      </a>
+      <div class="dropdown">
+        <a href="https://wiremock.org/docs" class="header__link"> Docs </a>
+        <div class="dropdown-content">
+          <!-- General link -->
+          <a href="https://wiremock.org/docs/"> WireMock </a>
+          <!-- General link -->
+          <a href="https://wiremock.org/docs/mock-api-templates">
+            Mock API Templates
+          </a>
+          <!-- General link -->
+          <a
+            href="https://docs.wiremock.io/getting-started/?utm_source=wiremock.org&amp;utm_medium=masthead_doc-links&amp;utm_campaign=2022_baseline"
+          >
+            WireMock Cloud
+          </a>
+          <!-- General link -->
+          <a href="https://wiremock.org/external-resources">
+            External Resources
+          </a>
+          <!-- Show the preview link -->
+          <a href="https://wiremock.org/2.x/docs/"> WireMock 2.x (Archive) </a>
+          <!-- Show the preview link -->
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <a href="https://wiremock.org/support" class="header__link">
+          Need Help?
+        </a>
+        <div class="dropdown-content">
+          <!-- General link -->
+          <a href="https://slack.wiremock.org/"> Q&amp;A on Slack </a>
+          <!-- General link -->
+          <a href="https://stackoverflow.com/questions/tagged/wiremock">
+            StackOverflow
+          </a>
+          <!-- General link -->
+          <a href="https://wiremock.org/support/commercial">
+            Commercial Options
+          </a>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <a href="https://wiremock.org/participate" class="header__link">
+          Participate
+        </a>
+        <div class="dropdown-content">
+          <!-- General link -->
+          <a href="https://slack.wiremock.org/"> Community Slack </a>
+          <!-- General link -->
+          <a
+            href="https://github.com/wiremock/community/blob/main/contributing/README.md"
+          >
+            Contributor Guide
+          </a>
+          <!-- General link -->
+          <a href="https://github.com/wiremock/"> Our GitHub </a>
+          <!-- General link -->
+          <a href="https://github.com/wiremock/wiremock.org"> This Website </a>
+          <!-- General link -->
+          <a
+            href="https://github.com/wiremock/.github/blob/main/CODE_OF_CONDUCT.md"
+          >
+            Code of Conduct
+          </a>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <a href="https://wiremock.org/external-resources/" class="header__link">
+          Resources
+        </a>
+        <div class="dropdown-content">
+          <!-- General link -->
+          <a href="https://library.wiremock.org/">
+            Mock API Templates Library
+          </a>
+          <!-- General link -->
+          <a href="https://github.com/wiremock/ecosystem">
+            WireMock Ecosystem
+          </a>
+          <!-- General link -->
+          <a href="https://twitter.com/wiremockorg"> Twitter </a>
+          <!-- General link -->
+          <a href="https://fosstodon.org/@wiremock"> Mastodon </a>
+          <!-- General link -->
+          <a href="https://community.wiremock.io/"> Slack Archive </a>
+          <!-- General link -->
+          <a href="https://wiremock.org/external-resources">
+            External Resources
+          </a>
+        </div>
+      </div>
 
       <div class="header__link">
         <div class="masthead__cta">
@@ -100,10 +184,7 @@ set class = class ~ " md-header--shadow md-header--lifted" %} {% elif
         </div>
       </div>
     </div>
-
-    
   </nav>
-
 
   <!-- Button to open search modal -->
   {% if "material/search" in config.plugins %} {% set search =
@@ -119,6 +200,3 @@ set class = class ~ " md-header--shadow md-header--lifted" %} {% elif
   <!-- Search interface -->
   {% include "partials/search.html" %} {% endif %} {% endif %}
 </header>
-
-
-
