base url expansion

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@ search: false
  *  - https://twitter.com/mmistakes
  *
 */
+$baseurl: "{{ site.baseurl }}";
 
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
