--- a/_sass/faq.scss
+++ b/_sass/faq.scss
@@ -25,7 +25,7 @@
       width: 38px;
       height: 38px;
       border-radius: 32px;
-      content: url(/assets/svg/faq.svg);
+      content: url("#{$baseurl}/assets/svg/faq.svg");
       background: linear-gradient(
         rgba(255, 149, 5, 0.5019607843),
         rgba(255, 149, 5, 0)
