--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: "DMSans";
-  src: url("/assets/fonts/DMSans-Regular.ttf") format("truetype");
+  src: url("#{$baseurl}/assets/fonts/DMSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DMSans";
-  src: url("/assets/fonts/DMSans-Medium.ttf") format("truetype");
+  src: url("#{$baseurl}/assets/fonts/DMSans-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
